[project]
name = "lockedout"
version = "0.2"
authors = [
  { name="variidian"}
]
dependencies = [
  "autostarter",
  "platformdirs",
  "playsound3"
]

description = "A simple python cli tool to set reminders (to lock in), notes and other various features."
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
lockedout = "lockedout.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lockedout" = ["*.txt","*.html","*.mp3"]